updated running_abscal notebook 	modified:   scripts/notebooks/running_abscal.ipynb

--- a/scripts/notebooks/running_abscal.ipynb
+++ b/scripts/notebooks/running_abscal.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "In this tutorial, we show you one way you can use the absolute calibration capabilities of `hera_cal` to phase and scale data to an absolute reference. We use example data from HERA-47 observation, having extracted out a smaller sub-array from the data.\n",
     "\n",
-    "We do this both on data that has already had `omnical` calibration applied as well as on raw data."
+    "We do this both on data that has already had `omnical` calibration applied as well as on raw data. We show how to use an `omnical` model visibility as the \"data\", and match non-identical keys to the reference model visibilities, as well as copy the `omnical` model visibilities across redundant baseline groups in the reference."
    ]
   },
   {
