modified:   abscal.py 	modified:   abscal_funcs.py 	modified:   data/zen.2458042.12552.xx.HH.uvXA/flags 	modified:   data/zen.2458042.12552.xx.HH.uvXA/header 	modified:   data/zen.2458042.12552.xx.HH.uvXA/visdata 	modified:   data/zen.2458042.13298.xx.HH.uvXA/flags 	modified:   data/zen.2458042.13298.xx.HH.uvXA/header 	modified:   data/zen.2458042.13298.xx.HH.uvXA/visdata 	modified:   data/zen.2458043.12552.xx.HH.uvA/flags 	modified:   data/zen.2458043.12552.xx.HH.uvA/header 	modified:   data/zen.2458043.12552.xx.HH.uvA/visdata 	modified:   data/zen.2458043.12552.xx.HH.uvORA/flags 	modified:   data/zen.2458043.12552.xx.HH.uvORA/header 	modified:   data/zen.2458043.12552.xx.HH.uvORA/history 	modified:   data/zen.2458043.12552.xx.HH.uvORA/visdata 	modified:   tests/test_abscal.py 	modified:   ../scripts/notebooks/running_abscal.ipynb

--- a/hera_cal/data/zen.2458043.12552.xx.HH.uvORA/history
+++ b/hera_cal/data/zen.2458043.12552.xx.HH.uvORA/history
@@ -1,4 +1,5 @@
 CORR-DACQ: created file.
   Read/written with pyuvdata version: 1.1.  Git origin: https://github.com/HERA-Team/pyuvdata.git.  Git hash: 8c65e5432ad70a38102b6c09ad5851e4de10f76a.  Git branch: h1c.  Git description: v1.1-533-g8c65e54.  Downselected to specific antennas using pyuvdata. Hera Hex antennas selected with hera_cal/scripts/extract_hh.py, hera_cal version: {'git_hash': '8de90f0f2afe01adec5a5e317716af5a8e7811b4', 'version': '1.0', 'git_description': 'v1.0', 'git_branch': 'h1c', 'git_origin': 'https://github.com/HERA-Team/hera_cal.git'}.
-Flagging command: "/home/obs/anaconda/envs/HERA/bin/xrfi_run.py --infile_format=miriad --algorithm=xrfi --kt_size=8 --kf_size=8 --sig_init=6 --sig_adj=2 --calfits_file=zen.2458043.12552.HH.uv.omni.calfits --extension=.flags.npz --summary zen.2458043.12552.xx.HH.uvO", Using hera_qm version: 1.0.  Git origin: https://github.com/HERA-Team/hera_qm.git.  Git hash: 53063f15406b8a12bf82e60e8628823ef81a01f2.  Git branch: h1c.  Git description: v1.0-1-g53063f1.Flagging command: "/home/obs/anaconda/envs/HERA/bin/xrfi_run.py --infile_format=miriad --algorithm=xrfi --kt_size=8 --kf_size=8 --sig_init=6 --sig_adj=2 --model_file=zen.2458043.12552.HH.uv.vis.uvfits --model_file_format=uvfits --extension=.flags.npz --summary zen.2458043.12552.yy.HH.uvO", Using hera_qm version: 1.0.  Git origin: https://github.com/HERA-Team/hera_qm.git.  Git hash: 53063f15406b8a12bf82e60e8628823ef81a01f2.  Git branch: h1c.  Git description: v1.0-1-g53063f1.Flagging command: "/home/obs/anaconda/envs/HERA/bin/xrfi_run.py --infile_format=miriad --algorithm=xrfi --kt_size=8 --kf_size=8 --sig_init=6 --sig_adj=2 --extension=.flags.npz --summary zen.2458043.12552.xy.HH.uvO", Using hera_qm version: 1.0.  Git origin: https://github.com/HERA-Team/hera_qm.git.  Git hash: 53063f15406b8a12bf82e60e8628823ef81a01f2.  Git branch: h1c.  Git description: v1.0-1-g53063f1.Flagging command: "/home/obs/anaconda/envs/HERA/bin/xrfi_run.py --infile_format=miriad --algorithm=xrfi --kt_size=8 --kf_size=8 --sig_init=6 --sig_adj=2 --extension=.flags.npz --summary zen.2458043.12552.yx.HH.uvO", Using hera_qm version: 1.0.  Git origin: https://github.com/HERA-Team/hera_qm.git.  Git hash: 53063f15406b8a12bf82e60e8628823ef81a01f2.  Git branch: h1c.  Git description: v1.0-1-g53063f1./home/obs/anaconda/envs/HERA/bin/xrfi_apply.py --infile_format=miriad --outfile_format=miriad --extension=R --overwrite --waterfalls=zen.2458043.12552.xx.HH.uvO.flags.npz,zen.2458043.12552.yy.HH.uvO.flags.npz,zen.2458043.12552.xy.HH.uvO.flags.npz,zen.2458043.12552.yx.HH.uvO.flags.npz,zen.2458043.12552.HH.uv.vis.uvfits.flags.npz,zen.2458043.12552.HH.uv.omni.calfits.x.flags.npz,zen.2458043.12552.HH.uv.omni.calfits.g.flags.npz --flag_file=zen.2458043.12552.xx.HH.uvO.flags.npz zen.2458043.12552.xx.HH.uvO
-  Read/written with pyuvdata version: 1.1.  Git origin: https://github.com/HERA-Team/pyuvdata.  Git hash: 0726743c5276e3bb4419171b99b3c13b0c8d9315.  Git branch: pyuvdata_inspect_tool.  Git description: v1.1-537-g0726743-dirty.  Downselected to specific antennas, frequencies using pyuvdata.
+  Read/written with pyuvdata version: 1.2.1.  Git origin: https://github.com/HERA-Team/pyuvdata.  Git hash: 1a3bf03ea8859d02a5c5e22fe5290f17fad653b4.  Git branch: master.  Git description: v1.2-49-g1a3bf03.
+Flagging command: "/users/nkern/anaconda2/bin/xrfi_run.py --algorithm xrfi --ex_ants 50 zen.2458043.12552.xx.HH.uvO", Using hera_qm version: 1.0.  Git origin: https://github.com/HERA-Team/hera_qm.  Git hash: a0f14c539f1f519367e2c59980a11f89ffb0021c.  Git branch: master.  Git description: v0.0.0-318-ga0f14c5./users/nkern/anaconda2/bin/xrfi_apply.py --flag_file zen.2458043.12552.xx.HH.uvO.flags.npz --overwrite zen.2458043.12552.xx.HH.uvO
+  Downselected to specific antennas, frequencies using pyuvdata.
