resolved merge conflicts 	modified:   abscal.py 	modified:   ../scripts/notebooks/running_abscal.ipynb

--- a/scripts/notebooks/running_abscal.ipynb
+++ b/scripts/notebooks/running_abscal.ipynb
@@ -2720,7 +2720,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# specify model files\n",
@@ -2738,7 +2740,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = hc.abscal.match_red_baselines(data, dantpos, model, mantpos, tol=2.0, verbose=False)\n",
@@ -2748,7 +2752,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "interp_kwargs = {}\n",
@@ -2758,7 +2764,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wgts = hc.abscal.mirror_data_to_red_bls(wgts, mantpos, tol=2.0, weights=True)"
@@ -2792,7 +2800,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# instantiate class\n",
@@ -3009,7 +3019,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# instantiate class\n",
@@ -3107,7 +3119,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# instantiate class\n",
