--- a/scripts/notebooks/running_smooth_cal.ipynb
+++ b/scripts/notebooks/running_smooth_cal.ipynb
@@ -91,7 +91,18 @@
    "source": [
     "## 2D Smoothing in Time and Frequency\n",
     "\n",
-    "2D smoothing is performed using `aipy.deconv.cleanTime smoothing is performed using a weighted rolling Gaussian average. To avoid edge effets, the calibration solutions are mirrored in time before smoothing (instead of assuming periodic boundary conditions). For wide smoothing kernels, this mirroring can happen several times. This process is controlled by two paramters:\n",
+    "2D smoothing is performed using `aipy.deconv.clean()` to restrict which modes can have CLEAN componenets. This smoothing is parameterized by two scales:\n",
+    "\n",
+    "* `freq_scale`: frequency scale in MHz to use for the low-pass filter. freq_scale^-1 corresponds to the half-width (i.e. the width of the positive part) of the region in fourier space, symmetric about 0, that is filtered out. The default is 10 MHz.\n",
+    "* `time_scale`: time scale in seconds. Defined analogously to freq_scale. The default is 1800 seconds.\n",
+    "\n",
+    "The 2D smoothing has two modes of operation, specified by the `filter_mode` parameter:\n",
+    "* `rect`: This is the default mode. In this mode, CLEAN components are picked in a box around 0 delay and 0 fringe rate. This is basically a standard boxcar filter in 2D Fourier space, except for the CLEAN algorithm used to handle flagged data.\n",
+    "* `plus`: so-called for shape of the allowed modes in 2D Fourier space. This ensures that all CLEAN components either have 0 delay or 0 fringe rate (or both). This results in solutions that are separable in time\n",
+    "\n",
+    "\n",
+    "\n",
+    "Time smoothing is performed using a weighted rolling Gaussian average. To avoid edge effets, the calibration solutions are mirrored in time before smoothing (instead of assuming periodic boundary conditions). For wide smoothing kernels, this mirroring can happen several times. This process is controlled by two paramters:\n",
     "a\n",
     "* `filter_scale`: the FHMW of the Gaussian temporal smoothing kernel (given in seconds)\n",
     "* `mirror_kernel_min_sigmas`: The number of stdev into the Gaussian kernel one must go before edge effects can be ignored. This sets the number of times we mirror the gains to produce smoothed solution.\n",
