update example notebooks to match new pyuvdata polarization convention

--- a/scripts/notebooks/io_example.ipynb
+++ b/scripts/notebooks/io_example.ipynb
@@ -19,10 +19,9 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:25.188799Z",
-     "start_time": "2018-07-12T22:22:23.576985Z"
+     "end_time": "2018-08-28T16:57:18.053697Z",
+     "start_time": "2018-08-28T16:57:15.708561Z"
     },
-    "collapsed": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -64,10 +63,9 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:25.311845Z",
-     "start_time": "2018-07-12T22:22:25.190970Z"
+     "end_time": "2018-08-28T16:57:19.221627Z",
+     "start_time": "2018-08-28T16:57:19.112699Z"
     },
-    "collapsed": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -88,7 +86,7 @@
     }
    },
    "source": [
-    "`data`, `flags`, and `nsamples` are `DataContainer`s and they include ***copies*** of data in the HERAData object. They work like dictionaries, mapping 3-tuples of the form `(0, 1, 'XX')` to waterfalls of shape `(Nint, Nfreq)`. They know to conjugate data when you ask for the reverse baseline are agnostic as to the capitalization convention for the polarization string. "
+    "`data`, `flags`, and `nsamples` are `DataContainer`s and they include ***copies*** of data in the HERAData object. They work like dictionaries, mapping 3-tuples of the form `(0, 1, 'xx')` to waterfalls of shape `(Nint, Nfreq)`. They know to conjugate data when you ask for the reverse baseline are agnostic as to the capitalization convention for the polarization string. "
    ]
   },
   {
@@ -96,34 +94,33 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:25.319432Z",
-     "start_time": "2018-07-12T22:22:25.313281Z"
+     "end_time": "2018-08-28T16:57:21.920893Z",
+     "start_time": "2018-08-28T16:57:21.912217Z"
     },
     "run_control": {
      "frozen": false,
      "read_only": false
-    },
-    "scrolled": true
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(53, 53, 'XX'), (53, 54, 'XX'), (54, 54, 'XX')]\n",
+      "[(53, 53, 'xx'), (53, 54, 'xx'), (54, 54, 'xx')]\n",
       "(60, 1024)\n",
-      "(-16.2417+56.2644j)\n",
-      "(-16.2417-56.2644j)\n",
-      "(-16.2417-56.2644j)\n"
+      "(-16.241686+56.264435j)\n",
+      "(-16.241686-56.264435j)\n",
+      "(-16.241686-56.264435j)\n"
      ]
     }
    ],
    "source": [
     "print(data.keys())\n",
-    "print(data[53, 54, 'XX'].shape)\n",
-    "print(data[53, 54, 'XX'][0,0])\n",
-    "print(data[54, 53, 'xx'][0,0])\n",
-    "print(data[54, 53, 'XX'][0,0])"
+    "print(data[53, 54, 'xx'].shape)\n",
+    "print(data[53, 54, 'xx'][0,0])\n",
+    "print(data[54, 53, 'XX'][0,0])\n",
+    "print(data[54, 53, 'xx'][0,0])"
    ]
   },
   {
@@ -151,8 +148,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:26.759279Z",
-     "start_time": "2018-07-12T22:22:25.321092Z"
+     "end_time": "2018-08-28T16:57:24.364196Z",
+     "start_time": "2018-08-28T16:57:22.275206Z"
     },
     "run_control": {
      "frozen": false,
@@ -165,8 +162,8 @@
      "output_type": "stream",
      "text": [
       "useful metadata: ['ants', 'antpos', 'freqs', 'times', 'lsts', 'pols', 'antpairs', 'bls', 'times_by_bl', 'lsts_by_bl']\n",
-      "uvh5 hd.freqs: [  1.00000000e+08   1.00097656e+08   1.00195312e+08 ...,   1.99707031e+08\n",
-      "   1.99804688e+08   1.99902344e+08]\n",
+      "uvh5 hd.freqs: [1.00000000e+08 1.00097656e+08 1.00195312e+08 ... 1.99707031e+08\n",
+      " 1.99804688e+08 1.99902344e+08]\n",
       "miriad hd.freqs: None\n"
      ]
     }
@@ -198,8 +195,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:26.911411Z",
-     "start_time": "2018-07-12T22:22:26.760725Z"
+     "end_time": "2018-08-28T16:57:24.556462Z",
+     "start_time": "2018-08-28T16:57:24.368835Z"
     },
     "run_control": {
      "frozen": false,
@@ -218,12 +215,17 @@
    "source": [
     "hd = HERAData([uvh5_file_1, uvh5_file_2])\n",
     "data, flags, nsamples = hd.read()\n",
-    "print(data[53, 54, 'XX'].shape)"
+    "print(data[53, 54, 'xx'].shape)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "### Going from DataContainers back to HERAData\n",
     "\n",
@@ -235,10 +237,13 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:26.992820Z",
-     "start_time": "2018-07-12T22:22:26.912691Z"
+     "end_time": "2018-08-28T16:57:24.661808Z",
+     "start_time": "2018-08-28T16:57:24.561461Z"
     },
-    "collapsed": true
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -269,8 +274,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:27.052184Z",
-     "start_time": "2018-07-12T22:22:26.994208Z"
+     "end_time": "2018-08-28T16:57:24.741440Z",
+     "start_time": "2018-08-28T16:57:24.666524Z"
     },
     "run_control": {
      "frozen": false,
@@ -290,9 +295,9 @@
    ],
    "source": [
     "hd = HERAData(uvh5_file_1)\n",
-    "data, flags, nsamples = hd.read(bls=[(53, 54, 'XX'), (54, 54, 'XX')], frequencies=hd.freqs[100:200], times=hd.times[0:20])\n",
+    "data, flags, nsamples = hd.read(bls=[(53, 54, 'xx'), (54, 54, 'xx')], frequencies=hd.freqs[100:200], times=hd.times[0:20])\n",
     "print('number of baselines:', len(data))\n",
-    "print('waterfall shape:', data[(53, 54, 'XX')].shape)"
+    "print('waterfall shape:', data[(53, 54, 'xx')].shape)"
    ]
   },
   {
@@ -326,8 +331,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:27.234983Z",
-     "start_time": "2018-07-12T22:22:27.053575Z"
+     "end_time": "2018-08-28T16:57:25.002044Z",
+     "start_time": "2018-08-28T16:57:24.745748Z"
     },
     "run_control": {
      "frozen": false,
@@ -370,8 +375,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:27.664439Z",
-     "start_time": "2018-07-12T22:22:27.236435Z"
+     "end_time": "2018-08-28T16:57:25.589713Z",
+     "start_time": "2018-08-28T16:57:25.006105Z"
     },
     "run_control": {
      "frozen": false,
@@ -384,14 +389,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Baselines loaded: [(52, 52, 'XX'), (52, 53, 'XX')]\n",
-      "Baselines loaded: [(53, 53, 'XX')]\n"
+      "Baselines loaded: [(52, 52, 'xx'), (52, 53, 'xx')]\n",
+      "Baselines loaded: [(53, 53, 'xx')]\n"
      ]
     }
    ],
    "source": [
     "hd = HERAData(miriad_file, filetype='miriad')\n",
-    "for data, flags, nsamples in hd.iterate_over_bls(Nbls=2, bls=[(52, 52, 'XX'), (52, 53, 'XX'), (53, 53, 'XX')]):\n",
+    "for data, flags, nsamples in hd.iterate_over_bls(Nbls=2, bls=[(52, 52, 'xx'), (52, 53, 'xx'), (53, 53, 'xx')]):\n",
     "    # do stuff here\n",
     "    print('Baselines loaded:', data.keys())"
    ]
@@ -415,8 +420,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:28.017910Z",
-     "start_time": "2018-07-12T22:22:27.666172Z"
+     "end_time": "2018-08-28T16:57:26.079083Z",
+     "start_time": "2018-08-28T16:57:25.594022Z"
     },
     "run_control": {
      "frozen": false,
@@ -464,10 +469,9 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:28.048423Z",
-     "start_time": "2018-07-12T22:22:28.019353Z"
+     "end_time": "2018-08-28T16:57:26.129016Z",
+     "start_time": "2018-08-28T16:57:26.083585Z"
     },
-    "collapsed": true,
     "run_control": {
      "frozen": false,
      "read_only": false
@@ -481,7 +485,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "`HERACal`'s read produces dictionaries that map antenna-pol tuples to gain waterfalls of N \n",
     "\n",
@@ -497,8 +506,12 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:28.054107Z",
-     "start_time": "2018-07-12T22:22:28.050457Z"
+     "end_time": "2018-08-28T16:57:26.138602Z",
+     "start_time": "2018-08-28T16:57:26.133630Z"
+    },
+    "run_control": {
+     "frozen": false,
+     "read_only": false
     }
    },
    "outputs": [
@@ -506,19 +519,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(9, 'jxx'), (10, 'jxx'), (20, 'jxx'), (22, 'jxx'), (31, 'jxx'), (43, 'jxx'), (53, 'jxx'), (64, 'jxx'), (65, 'jxx'), (72, 'jxx'), (80, 'jxx'), (88, 'jxx'), (89, 'jxx'), (96, 'jxx'), (97, 'jxx'), (104, 'jxx'), (105, 'jxx'), (112, 'jxx')]\n",
+      "[(9, 'Jxx'), (10, 'Jxx'), (20, 'Jxx'), (22, 'Jxx'), (31, 'Jxx'), (43, 'Jxx'), (53, 'Jxx'), (64, 'Jxx'), (65, 'Jxx'), (72, 'Jxx'), (80, 'Jxx'), (88, 'Jxx'), (89, 'Jxx'), (96, 'Jxx'), (97, 'Jxx'), (104, 'Jxx'), (105, 'Jxx'), (112, 'Jxx')]\n",
       "(3, 1024)\n"
      ]
     }
    ],
    "source": [
     "print(gains.keys())\n",
-    "print(gains[(9, 'jxx')].shape)"
+    "print(gains[(9, 'Jxx')].shape)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "Unlike DataContainers, these dictionaries have no special metadata stored internally. However, the HERACal object generates a variety of useful metadata that is stored internally."
    ]
@@ -528,8 +546,12 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:28.062072Z",
-     "start_time": "2018-07-12T22:22:28.055570Z"
+     "end_time": "2018-08-28T16:57:26.152015Z",
+     "start_time": "2018-08-28T16:57:26.143615Z"
+    },
+    "run_control": {
+     "frozen": false,
+     "read_only": false
     }
    },
    "outputs": [
@@ -538,9 +560,9 @@
      "output_type": "stream",
      "text": [
       "Frequencies: 100.0 to 199.90234375\n",
-      "Times: 2457698.40355 to 2457698.4038\n",
-      "Antennas: [(9, 'jxx'), (10, 'jxx'), (20, 'jxx'), (22, 'jxx'), (31, 'jxx'), (43, 'jxx'), (53, 'jxx'), (64, 'jxx'), (65, 'jxx'), (72, 'jxx'), (80, 'jxx'), (88, 'jxx'), (89, 'jxx'), (96, 'jxx'), (97, 'jxx'), (104, 'jxx'), (105, 'jxx'), (112, 'jxx')]\n",
-      "Pols: ['jxx']\n"
+      "Times: 2457698.403551911 to 2457698.403800471\n",
+      "Antennas: [(9, 'Jxx'), (10, 'Jxx'), (20, 'Jxx'), (22, 'Jxx'), (31, 'Jxx'), (43, 'Jxx'), (53, 'Jxx'), (64, 'Jxx'), (65, 'Jxx'), (72, 'Jxx'), (80, 'Jxx'), (88, 'Jxx'), (89, 'Jxx'), (96, 'Jxx'), (97, 'Jxx'), (104, 'Jxx'), (105, 'Jxx'), (112, 'Jxx')]\n",
+      "Pols: ['Jxx']\n"
      ]
     }
    ],
@@ -553,7 +575,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "To put data from dictionaries back into `HERACal` objects, again one uses the `update()` function, followed by the standard `pyuvdata.UVCal` write."
    ]
@@ -563,10 +590,13 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-12T22:22:28.136031Z",
-     "start_time": "2018-07-12T22:22:28.063722Z"
+     "end_time": "2018-08-28T16:57:26.235699Z",
+     "start_time": "2018-08-28T16:57:26.156702Z"
     },
-    "collapsed": true
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -580,7 +610,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "For now, there are no plans to support partial reading or writing for `HERACal` or any other calibration formats besides `calfits`. However, the HERAData example gives us clear mode of operation if we were to persure that option in the future."
    ]
@@ -602,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
