--- a/scripts/notebooks/running_delay_filter.ipynb
+++ b/scripts/notebooks/running_delay_filter.ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-02T22:49:52.074122Z",
-     "start_time": "2018-08-02T22:49:48.747415Z"
+     "end_time": "2018-08-28T16:50:48.658726Z",
+     "start_time": "2018-08-28T16:50:46.066985Z"
     },
     "run_control": {
      "frozen": false,
@@ -59,8 +59,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-02T22:49:53.946872Z",
-     "start_time": "2018-08-02T22:49:52.080220Z"
+     "end_time": "2018-08-28T16:50:50.740027Z",
+     "start_time": "2018-08-28T16:50:48.664945Z"
     },
     "run_control": {
      "frozen": false,
@@ -91,8 +91,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-02T22:49:54.507088Z",
-     "start_time": "2018-08-02T22:49:53.952159Z"
+     "end_time": "2018-08-28T16:50:51.416979Z",
+     "start_time": "2018-08-28T16:50:50.745045Z"
     },
     "run_control": {
      "frozen": false,
@@ -120,13 +120,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "run_control": {
@@ -143,8 +136,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-02T22:49:54.517434Z",
-     "start_time": "2018-08-02T22:49:54.512435Z"
+     "end_time": "2018-08-28T16:50:51.426416Z",
+     "start_time": "2018-08-28T16:50:51.421773Z"
     },
     "run_control": {
      "frozen": false,
@@ -161,8 +154,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-02T22:49:56.413937Z",
-     "start_time": "2018-08-02T22:49:54.522111Z"
+     "end_time": "2018-08-28T16:50:53.635718Z",
+     "start_time": "2018-08-28T16:50:51.431021Z"
     },
     "run_control": {
      "frozen": false,
@@ -217,8 +210,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-02T22:50:00.479841Z",
-     "start_time": "2018-08-02T22:49:56.418506Z"
+     "end_time": "2018-08-28T16:50:56.844029Z",
+     "start_time": "2018-08-28T16:50:53.640559Z"
     },
     "run_control": {
      "frozen": false,
@@ -247,8 +240,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-02T22:50:00.624789Z",
-     "start_time": "2018-08-02T22:50:00.485224Z"
+     "end_time": "2018-08-28T16:50:56.975617Z",
+     "start_time": "2018-08-28T16:50:56.848584Z"
     },
     "run_control": {
      "frozen": false,
@@ -277,8 +270,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-02T22:50:00.763625Z",
-     "start_time": "2018-08-02T22:50:00.630177Z"
+     "end_time": "2018-08-28T16:50:57.100193Z",
+     "start_time": "2018-08-28T16:50:56.981047Z"
     },
     "run_control": {
      "frozen": false,
@@ -310,8 +303,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-02T22:50:01.346869Z",
-     "start_time": "2018-08-02T22:50:00.768628Z"
+     "end_time": "2018-08-28T16:50:57.768379Z",
+     "start_time": "2018-08-28T16:50:57.105776Z"
     },
     "run_control": {
      "frozen": false,
@@ -366,8 +359,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-02T22:50:01.356499Z",
-     "start_time": "2018-08-02T22:50:01.351457Z"
+     "end_time": "2018-08-28T16:50:57.780033Z",
+     "start_time": "2018-08-28T16:50:57.773388Z"
     },
     "run_control": {
      "frozen": false,
@@ -407,8 +400,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-02T22:50:01.752758Z",
-     "start_time": "2018-08-02T22:50:01.360967Z"
+     "end_time": "2018-08-28T16:50:58.253931Z",
+     "start_time": "2018-08-28T16:50:57.785442Z"
     },
     "run_control": {
      "frozen": false,
@@ -438,8 +431,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-02T22:50:02.194753Z",
-     "start_time": "2018-08-02T22:50:01.757323Z"
+     "end_time": "2018-08-28T16:50:58.758696Z",
+     "start_time": "2018-08-28T16:50:58.258337Z"
     },
     "run_control": {
      "frozen": false,
@@ -465,8 +458,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-02T22:50:02.206418Z",
-     "start_time": "2018-08-02T22:50:02.199769Z"
+     "end_time": "2018-08-28T16:50:58.770408Z",
+     "start_time": "2018-08-28T16:50:58.763302Z"
     },
     "run_control": {
      "frozen": false,
@@ -480,7 +473,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
+   },
    "source": [
     "## Partial I/O\n",
     "\n",
