fix polarization convention in smoothcal example notebook

--- a/scripts/notebooks/running_smooth_cal.ipynb
+++ b/scripts/notebooks/running_smooth_cal.ipynb
@@ -74,7 +74,7 @@
    },
    "outputs": [],
    "source": [
-    "ant = (54,'jxx')\n",
+    "ant = (54,'Jxx')\n",
     "calfits_list = glob.glob(os.path.join(DATA_PATH, 'test_input/*.abs.calfits_54x_only'))\n",
     "flags_npz_list = glob.glob(os.path.join(DATA_PATH, 'test_input/*.uvOCR_53x_54x_only.flags.applied.npz'))\n",
     "cs = CalibrationSmoother(calfits_list, flags_npz_list=flags_npz_list)"
@@ -86,6 +86,10 @@
     "ExecuteTime": {
      "end_time": "2018-08-23T00:47:48.264130Z",
      "start_time": "2018-08-23T00:47:48.254171Z"
+    },
+    "run_control": {
+     "frozen": false,
+     "read_only": false
     }
    },
    "source": [
@@ -112,6 +116,10 @@
     "ExecuteTime": {
      "end_time": "2018-08-25T00:07:23.933950Z",
      "start_time": "2018-08-25T00:07:19.481198Z"
+    },
+    "run_control": {
+     "frozen": false,
+     "read_only": false
     }
    },
    "outputs": [],
