Delay_Filter --> DelayFilter

--- a/scripts/notebooks/delay_plus_rfi.ipynb
+++ b/scripts/notebooks/delay_plus_rfi.ipynb
@@ -33,7 +33,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
     "import os\n",
-    "from hera_cal.delay_filter import Delay_Filter\n",
+    "from hera_cal.delay_filter import DelayFilter\n",
     "from hera_cal.data import DATA_PATH\n",
     "from pyuvdata import UVData\n",
     "import shutil\n",
@@ -54,7 +54,7 @@
    "source": [
     "## Read Data\n",
     "\n",
-    "Load data by creating a `Delay_Filter` object and then reading in some data."
+    "Load data by creating a `DelayFilter` object and then reading in some data."
    ]
   },
   {
@@ -73,7 +73,7 @@
    },
    "outputs": [],
    "source": [
-    "dfil = Delay_Filter()\n",
+    "dfil = DelayFilter()\n",
     "fname = os.path.join(DATA_PATH, \"zen.2458043.12552.xx.HH.uvORA\")\n",
     "uv = UVData()\n",
     "uv.read_miriad(fname)\n",
