--- a/scripts/notebooks/running_delay_filter.ipynb
+++ b/scripts/notebooks/running_delay_filter.ipynb
@@ -34,7 +34,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
     "import os\n",
-    "from hera_cal.delay_filter import Delay_Filter\n",
+    "from hera_cal.delay_filter import DelayFilter\n",
     "from hera_cal.data import DATA_PATH\n",
     "from hera_cal import io\n",
     "import shutil"
@@ -51,7 +51,7 @@
    "source": [
     "## Reading Data\n",
     "\n",
-    "Let's start by loading by creating a `Delay_Filter` object and then loading in some data."
+    "Let's start by loading by creating a `DelayFilter` object and then loading in some data."
    ]
   },
   {
@@ -69,7 +69,7 @@
    },
    "outputs": [],
    "source": [
-    "dfil = Delay_Filter()\n",
+    "dfil = DelayFilter()\n",
     "fname = os.path.join(DATA_PATH, \"zen.2458043.12552.xx.HH.uvORA\")\n",
     "dfil.load_data(fname, filetype='miriad')"
    ]
@@ -101,7 +101,7 @@
    },
    "outputs": [],
    "source": [
-    "dfil = Delay_Filter()\n",
+    "dfil = DelayFilter()\n",
     "hd = io.HERAData(fname, filetype='miriad')\n",
     "hd.read()\n",
     "dfil.load_data(hd)"
@@ -116,7 +116,7 @@
     }
    },
    "source": [
-    "`load_data` also supports lists of either of those kinds of input. `Delay_Filter` objects also suport `load_data_as_dicts`, which allows one to directly input the data, flags, freqs and antpos. If either of these are used, writing to disk (see below) is not available."
+    "`load_data` also supports lists of either of those kinds of input. `DelayFilter` objects also suport `load_data_as_dicts`, which allows one to directly input the data, flags, freqs and antpos. If either of these are used, writing to disk (see below) is not available."
    ]
   },
   {
@@ -293,7 +293,7 @@
     }
    },
    "source": [
-    "The results are stored in the `Delay_Filter` object. `filtered_residuals` is a `DataContainer` that maps baseline/pol keys to the results of the high-pass filter. `CLEAN_models` is also a `DataContainer` that contains the smooth spectrum components found iteratively by `uvtools.dspec.delay_filter` (which itself uses `aipy.deconv.clean`).\n",
+    "The results are stored in the `DelayFilter` object. `filtered_residuals` is a `DataContainer` that maps baseline/pol keys to the results of the high-pass filter. `CLEAN_models` is also a `DataContainer` that contains the smooth spectrum components found iteratively by `uvtools.dspec.delay_filter` (which itself uses `aipy.deconv.clean`).\n",
     "\n",
     "Now let's plot some reuslts. Running delay filter removes a lot of the large-spectral scale power in the data. Clearly, there's some power left in, in part due to the band edges and in part due to unflagged RFI. "
    ]
@@ -351,7 +351,7 @@
     }
    },
    "source": [
-    "The `Delay_Filter` also stores the `info` returned from each frequency that the delay CLEANing was performed on. This includes some information about whether or not it ran successfully."
+    "The `DelayFilter` also stores the `info` returned from each frequency that the delay CLEANing was performed on. This includes some information about whether or not it ran successfully."
    ]
   },
   {
@@ -392,7 +392,7 @@
    "source": [
     "## Writing the Results to Disk\n",
     "\n",
-    "When data is loaded via a single string path or a single `UVData` object, `Delay_Filter` objects enable easy writing to disk of the results. This uses `hera_cal.io.update_vis` to update the input visibility data file or object, only modifying the visibility data."
+    "When data is loaded via a single string path or a single `UVData` object, `DelayFilter` objects enable easy writing to disk of the results. This uses `hera_cal.io.update_vis` to update the input visibility data file or object, only modifying the visibility data."
    ]
   },
   {
