--- a/scripts/notebooks/running_smooth_cal.ipynb
+++ b/scripts/notebooks/running_smooth_cal.ipynb
@@ -25,8 +25,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-13T18:35:39.376074Z",
-     "start_time": "2019-05-13T18:35:36.994892Z"
+     "end_time": "2019-05-13T18:50:21.117341Z",
+     "start_time": "2019-05-13T18:50:19.816221Z"
     },
     "run_control": {
      "frozen": false,
@@ -63,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-13T18:36:01.769102Z",
-     "start_time": "2019-05-13T18:36:01.620062Z"
+     "end_time": "2019-05-13T18:50:21.237901Z",
+     "start_time": "2019-05-13T18:50:21.119737Z"
     },
     "run_control": {
      "frozen": false,
@@ -79,7 +79,8 @@
     "ant = (54,'Jxx')\n",
     "calfits_list = glob.glob(os.path.join(DATA_PATH, 'test_input/*.abs.calfits_54x_only'))\n",
     "flags_npz_list = glob.glob(os.path.join(DATA_PATH, 'test_input/*.uvOCR_53x_54x_only.flags.applied.npz'))\n",
-    "cs = CalibrationSmoother(calfits_list, flag_file_list=flags_npz_list, flag_filetype='npz')"
+    "cs = CalibrationSmoother(calfits_list, flag_file_list=flags_npz_list, flag_filetype='npz')\n",
+    "original_gains = deepcopy(cs.gain_grids)"
    ]
   },
   {
@@ -108,16 +109,16 @@
     "\n",
     "The filtering also supports a window/tapering function for the frequency Fourier transform. The default window is `'tukey'` with `alpha=0.5` (rather than `'blackman-harris'` or `'none'` i.e. tophat).\n",
     "\n",
-    "The smoothed calibration solutions are always stored in the dictionary `cs.filtered_gain_grids`. For interactive work, this can be reset with `cs.reset_filtering()` without having to reload the data and calibration solutions. To pick out the filtered gains associated with a particular file, one can call `cs.filtered_gain_grids[ant][cs.time_indices[calfits_file],:]`"
+    "The smoothed calibration solutions are overwrite those stored in `cs.gain_grids`. To pick out the filtered gains associated with a particular file, one can call `cs.gain_grids[ant][cs.time_indices[calfits_file],:]`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-13T18:36:07.838422Z",
-     "start_time": "2019-05-13T18:36:04.865267Z"
+     "end_time": "2019-05-13T18:50:24.350583Z",
+     "start_time": "2019-05-13T18:50:21.239908Z"
     },
     "run_control": {
      "frozen": false,
@@ -145,11 +146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-13T18:36:13.715189Z",
-     "start_time": "2019-05-13T18:36:13.318595Z"
+     "end_time": "2019-05-13T18:50:24.769720Z",
+     "start_time": "2019-05-13T18:50:24.352653Z"
     },
     "run_control": {
      "frozen": false,
@@ -176,11 +177,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-13T18:36:15.249373Z",
-     "start_time": "2019-05-13T18:36:14.667296Z"
+     "end_time": "2019-05-13T18:50:25.599393Z",
+     "start_time": "2019-05-13T18:50:24.771951Z"
     },
     "run_control": {
      "frozen": false,
@@ -213,14 +214,14 @@
     "extent = [cs.freqs[0]/1e6, cs.freqs[-1]/1e6, cs.time_grid[-1]-np.floor(cs.time_grid[0]), cs.time_grid[0]-np.floor(cs.time_grid[0])]\n",
     "plt.figure(figsize=(12,5))\n",
     "plt.subplot(121)\n",
-    "plt.imshow(np.angle(cs.gain_grids[ant]) / (~cs.flag_grids[ant]), cmap='inferno', aspect='auto', extent=extent)\n",
+    "plt.imshow(np.angle(original_gains[ant]) / (~cs.flag_grids[ant]), cmap='inferno', aspect='auto', extent=extent)\n",
     "plt.colorbar(label='Phase (radians)')\n",
     "plt.title('Unfiltered: ' + str(ant));\n",
     "plt.xlabel('Frequency (MHz)')\n",
     "plt.ylabel('JD -' + str(int(np.floor(cs.time_grid[0]))))\n",
     "\n",
     "plt.subplot(122)\n",
-    "plt.imshow(np.angle(cs.filtered_gain_grids[ant]), cmap='inferno', aspect='auto', extent=extent)\n",
+    "plt.imshow(np.angle(cs.gain_grids[ant]), cmap='inferno', aspect='auto', extent=extent)\n",
     "plt.colorbar(label='Phase (radians)')\n",
     "plt.title('2D Time And Freq Filtered: ' + str(ant))\n",
     "plt.tight_layout()"
@@ -228,11 +229,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-13T18:36:22.567732Z",
-     "start_time": "2019-05-13T18:36:22.407384Z"
+     "end_time": "2019-05-13T18:50:25.825439Z",
+     "start_time": "2019-05-13T18:50:25.601838Z"
     },
     "run_control": {
      "frozen": false,
@@ -247,7 +248,7 @@
        "Text(0, 0.5, 'Gain Amplitude')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -268,8 +269,8 @@
     "plt.figure()\n",
     "integration = 90\n",
     "unflagged = ~cs.flag_grids[ant][integration,:]\n",
-    "plt.plot(cs.freqs[unflagged]/1e6, np.abs(cs.gain_grids[ant][integration,unflagged]), label='Raw Gains')\n",
-    "plt.plot(cs.freqs[unflagged]/1e6, np.abs(cs.filtered_gain_grids[ant][integration,unflagged]), label='2D Time & Freq Smoothed')\n",
+    "plt.plot(cs.freqs[unflagged]/1e6, np.abs(original_gains[ant][integration,unflagged]), label='Raw Gains')\n",
+    "plt.plot(cs.freqs[unflagged]/1e6, np.abs(cs.gain_grids[ant][integration,unflagged]), label='2D Time & Freq Smoothed')\n",
     "plt.legend()\n",
     "plt.xlabel('Frequency (MHz)')\n",
     "plt.ylabel('Gain Amplitude')"
@@ -277,11 +278,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-13T18:36:23.274345Z",
-     "start_time": "2019-05-13T18:36:23.270587Z"
+     "end_time": "2019-05-13T18:50:25.832830Z",
+     "start_time": "2019-05-13T18:50:25.828027Z"
     },
     "code_folding": [],
     "run_control": {
@@ -314,16 +315,16 @@
     "* `filter_scale`: the FHMW of the Gaussian temporal smoothing kernel (given in seconds)\n",
     "* `mirror_kernel_min_sigmas`: The number of stdev into the Gaussian kernel one must go before edge effects can be ignored. This sets the number of times we mirror the gains to produce smoothed solution.\n",
     "\n",
-    "The smoothed calibration solutions are always stored in the dictionary `cs.filtered_gain_grids`. For interactive work, this can be reset with `cs.reset_filtering()` without having to reload the data and calibration solutions. To pick out the filtered gains associated with a particular file, one can call `cs.filtered_gain_grids[ant][cs.time_indices[calfits_file],:]`"
+    "The smoothed calibration solutions are overwrite those loaded in the dictionary `cs.gain_grids`. To pick out the filtered gains associated with a particular file, one can call `cs.gain_grids[ant][cs.time_indices[calfits_file],:]`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-13T18:36:27.856799Z",
-     "start_time": "2019-05-13T18:36:26.808441Z"
+     "end_time": "2019-05-13T18:50:27.192597Z",
+     "start_time": "2019-05-13T18:50:25.836480Z"
     },
     "run_control": {
      "frozen": false,
@@ -341,7 +342,7 @@
    ],
    "source": [
     "cs.time_filter(filter_scale=1800.0, mirror_kernel_min_sigmas=5)\n",
-    "time_filtered = deepcopy(cs.filtered_gain_grids[ant])"
+    "time_filtered = deepcopy(cs.gain_grids[ant])"
    ]
   },
   {
@@ -360,11 +361,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-13T18:36:32.792424Z",
-     "start_time": "2019-05-13T18:36:30.144898Z"
+     "end_time": "2019-05-13T18:50:30.347458Z",
+     "start_time": "2019-05-13T18:50:27.194807Z"
     },
     "run_control": {
      "frozen": false,
