--- a/hera_cal/data/zen.2457698.40355.xx.HH.uvcA/history
+++ b/hera_cal/data/zen.2457698.40355.xx.HH.uvcA/history
@@ -3,3 +3,4 @@ CORR-DACQ: created file.
 PULL ANTPOLS:/home/obs/src/RTP/scripts/hera/pull_antpols_simple.py -p xx -a 9,10,20,22,31,43,53,64,65,72,80,81,88,89,96,97,104,105,112 zen.2457698.40355.xx.uvc
   Read/written with pyuvdata version: 1.1.  Downselected to specific times, frequencies using pyuvdata.
   Read/written with pyuvdata version: 1.1.  Git origin: https://github.com/HERA-Team/pyuvdata.git.  Git hash: f0ce5e984235ad274ece7b55032b679864f799f0.  Git branch: master.  Git description: v1.1-507-gf0ce5e9.
+  Read/written with pyuvdata version: 1.4.2.  Git origin: https://github.com/RadioAstronomySoftwareGroup/pyuvdata.git.  Git hash: 1889573c13e27532aa1854463a4f38daa11c9772.  Git branch: master.  Git description: v1.4-363-g1889573.
